--- a/webversion/card_ext_png4.tex
+++ b/webversion/card_ext_png4.tex
@@ -407,7 +407,7 @@ external/system call/.add=
 
 
 
-    \node [black] at (recCen3) {
+    \node [black,nodes={color=green!40!black}] at (recCen3) {
 $\begin{tikzcd}[sep={between origins, \betweenpieces}]
       	\blockthree{0} && \blockthree{0} && \blockthree{0} && \blockthree{1} && \blockthree{0} && \blockthree{0} && \blockthree{0} \\
       	\blockthree{0} & \blockthree{0} & \blockthree{0} & \blockthree{0} & \blockthree{1} & \blockthree{1} & \blockthree{0} & \blockthree{1} & \blockthree{1} & \blockthree{0} & \blockthree{0} & \blockthree{0} & \blockthree{0} \\
